<resources>
    <string name="app_name">Shoe Store</string>

<!--    Button Labels   -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

<!--    Text   -->
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Click the button to view instructions</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_message">Click the button to view the shoe listing. \nIf this is the first time usage the listing will be empty. \nClick the \"+\" button to add new shoe details.</string>

<!--    Labels   -->
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_desc">Description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="browse">Browse</string>
    <string name="new_item">New Item</string>
    <string name="logout">Logout</string>
    <string name="empty_input_validation_error">This field is required</string>
</resources>
