<?xml version="1.0" encoding="utf-8"?>
<!-- Uses linear layout because the design is simple and requires having views positioned
one below the other-->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.instructions.InstructionsFragment">


        <TextView
            android:id="@+id/instructions_tv"
            style="@style/AppTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/instructions_message_tv"
            style="@style/AppTextSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/instructions_message"
             />

        <Button
            android:id="@+id/ok_btn"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ok"/>

    </LinearLayout>
</layout>
