<?xml version="1.0" encoding="utf-8"?>
<!-- Uses linear layout because the design is simple and requires having views positioned
one below the other-->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_tv"
            style="@style/AppTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/welcome_message_tv"
            style="@style/AppTextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message_tv" />

    </LinearLayout>
    </layout>