<?xml version="1.0" encoding="utf-8"?>
<!-- Uses constraint layout because the design is complex with many views.
Constraint layout eliminates using nested view groups which is required otherwise to achieve the same result-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fragment_margin"
        tools:context=".screens.details.DetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="130dp" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/AppTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_et"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/company_tv"
            style="@style/AppTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_et"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/size_tv"
            style="@style/AppTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_et"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/desc_tv"
            style="@style/AppTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_desc"
            app:layout_constraintBaseline_toBaselineOf="@+id/desc_et"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name_et"
            style="@style/AppTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/company_et"
            style="@style/AppTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/name_et" />

        <EditText
            android:id="@+id/size_et"
            style="@style/AppTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/company_et" />

        <EditText
            android:id="@+id/desc_et"
            style="@style/AppTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/size_et" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_btn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
